Fix: Mobile Nav lost gap. Added it back

--- a/src/components/home/Nav.module.scss
+++ b/src/components/home/Nav.module.scss
@@ -1,10 +1,10 @@
 @use "@/styles/variables" as *;
 
 .mobileNav {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    display: flex;
+    gap: var(--space-med);
     width: min(100%, 50rem);
-    padding: var(--space-xxl) 5vw;
+    padding: var(--space-xxl) 0;
 
         .navBtn {
         background-color: var(--color-surface);
